--- a/index.html
+++ b/index.html
@@ -27,25 +27,59 @@
       display: inline;
       padding: 0px 10px 0px 10px;
     }
+    {
+    .first{background-image: url("http://ahdimages.com/famous-quotes-famous-people/famous-quotes-by-famous-people-6/");
+    }
   </style>
 </head>
 <body>
   <header>
-    <h1> Poetry Paradise </h1>
+    <h1> Quotopia </h1>
     <ul>
-      <li><a href="#"> My Favourite Poets </a></li>
-      <li><a href="#"> My Favourite Poems </a></li>
-      <li><a href="#"> Poems written by me </a></li>
+      <li><a href="#"> Inspirational Quotes </a></li>
+      <li><a href="#"> Quotes on life </a></li>
+      <li><a href="#"> Quotes by famous people </a></li>
     </ul>
   </header>
   <style>
   ul {background-color: black;}
   </style>
-  <h2> About this website </h2>
-  <p> Welcome to my poetry website! It has always been a dream to make a website like this. This website gives you the opportunity to read poems by some of the greatest poets in history.</p>
-  <h2> My Inspiration </h2>
-  <p> Throughout my childhood I have been inspired by poetry. I hope my website inspires you to start writing too. </p>
-  <h2> Concluding points: </h2>
-  <p> I hope you enjoy this website and look forward to your feedback. </p>
+  <h2> Inspirational Quotes </h2>
+  <p> <b>
+   <li>"If opportunity doesn't knock, build a door." </li>
+   <li> "There is no elevator to success, you have to take the stairs." </li>
+   <li> "Be strong. Because things will get better. I may be stormy now but it never rains forever." </li>
+   <li> "A journey of a thousand miles begins with a single step." </li>
+   <li> "Be the change you wish to see in the world." </li>
+   <li> "Courage doesn't always roar. Sometimes courage is the quiet voice at the end of the day saying, 'I will try again tomorrow.'" </li>
+   <li> "Fall seven times, stand up eight." </li>
+   <li> "In order to succeed, your desire for success must be greater than your fear of failure." </li>
+   <li> "There will be obstacles. There will be doubters. There will be mistakes. But with hard work, there are no limits." </li>
+  <li> "Strong women wear their pain like stilletos, no matter how much it hurts, all you see is the beauty of it." </li>
+  </b> </p>
+  <h2> Funny Quotes </h2>
+  <p> <b> <li> "I'm not lazy, I'm just on my energy saving mode." </li>
+  <li> "Life was much easier when Apple and Blackberry were just fruits." </li>
+  <li> "With great power comes great electricity bills." </li>
+  <li> "If each day is a gift, I would like to know where I can return Mondays." </li>
+  <li> "The only reason I am fat is because a tiny body couldn't store all this personality." </li>
+  <li> "Life is short, smile while you still have teeth." </li>
+  <li> "The secret to happiness is...to have a bad memory!" </li>
+  <li> "If you can't convince them, confuse them." </li>
+  <li> "If you don't do a lot of stupid things when you are young. You don't have funny things to talk about when you are old" </li>
+  <li> "Life is short, smile while you still have teeth." </li>
+</b> <h2> Quotes by famous people </h2>
+  <p> <b> 
+  <li> "When I was 5 years old, my mother told me that happiness was the key to life. When I went to school, they asked me what I wanted to be when i grew up. I wrote down 'happy'. They told me I did not understand the assignment, I told them they did not understand life." -John Lennon </li>
+  <li> "If you want to live a happy life, tie it to a goal. Not to people or things." - Albert Einstein </li>
+  <li> "A pessimist sees the difficulty in every opportunity; an optimist sees the opportunity in every difficulty." - Winston Churchill </li>
+  <li> "Well done is better than well said." - Benjamin Franklin </li>
+  <li> "Don't waste your time with explanations, people only hear what they want to hear." - Paulo Coelho </li>
+  <li> "When i do good, I feel good. When I do bad, I feel bad. That's my religion." - Abraham Lincoln </li>
+  <li> "If today were the last day of your life, would you want to do what you are about to do today?" - Steve Jobs </li>
+  <li> "An eye for an eye only ends up making the whole word blind." - Gandhi </li>
+  <li> "The mind is everything. WHat you think, you become." - Buddha </li>
+  <li> "All our dreams come true if we have the courage to pursue them." - Walt Disney </li>
+   </b> </p>
 </body>
 
